Added what i like.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>kfwong.com</title>
+		<title>CS3216 Intro</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
@@ -11,27 +11,21 @@
 			font-family: 'Share Tech Mono', monospace !important;
 			color: white;
 		}
-
 		p{
 			font-size: 14pt;
 		}
-
 		.blue {
 			color: #24D1FF;
 		}
-
 		.green {
 			color: #00CA60;
 		}
-
 		.yellow {
 			color: #FBBD08;
 		}
-
 		.red {
 			color: #DB2828;
 		}
-
 		</style>
 	</head>
 	<body style="background-color: #283035;">
@@ -50,9 +44,6 @@
 				<br/>
 				<hr/>
 			</div>
-			<a class="item">
-				<h3 class="ui header inverted centered red">My Works</h3>
-			</a>
 			<a href="https://www.kfwong.com" class="item">
 				<h3 class="ui header inverted centered red">About Me</h3>
 			</a>
@@ -122,6 +113,47 @@
 							<div class="ui fluid">
 								
 								<img class="ui image" src="./orbital.png">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="one wide column"></div>
+				<div class="twelve wide column">
+					<h1 style="font-size: 32pt; color: white;">What I Like</h1>
+					<div class="ui three column grid">
+						<div class="column">
+							<div class="ui fluid card">
+								<div class="image">
+									<img src="./like3.jpg">
+								</div>
+								<div class="content">
+									<a class="header">Archery! When I hit the bullseye.</a>
+									<p style="color: black;">Pretend you didn't see the outlier.</p>
+								</div>
+							</div>
+						</div>
+						<div class="column">
+							<div class="ui fluid card">
+								<div class="image">
+									<img src="./like2.jpg">
+								</div>
+								<div class="content">
+									<a class="header">Shooting my 70 inch, 30 pounds metal bow!</a>
+									<p style="color: black;">It's harder to draw than you think it is.</p>
+								</div>
+							</div>
+						</div>
+						<div class="column">
+							<div class="ui fluid card">
+								<div class="image">
+									<img src="./like1.jpg">
+								</div>
+								<div class="content">
+									<a class="header">Boardgames!</a>
+									<p style="color: black;">Ultimate ice breaking activity!</p>
+								</div>
 							</div>
 						</div>
 					</div>
