Added what i like.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<hr/>
 			</div>
 			<a href="https://www.kfwong.com" class="item">
-				<h3 class="ui header inverted centered red">About Me</h3>
+				<h3 class="ui header inverted centered red">Main Site</h3>
 			</a>
 			<div class="item">
 				<hr/>
